# desk-framework

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: init-project.js
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmd/: mod.rs  setting.rs  window.rs
src/components/: SidebarMenu.vue  TauriInfo.vue  TitleBar.vue
src/components/ui/: Card.vue
src/i18n/: index.js
src/i18n/locales/: en-US.js  zh-CN.js
src/lib/: functions.js  index.js  router.js  store.js  useTheme.js  utils.js
src/pages/: ComponentsPage.vue  DocumentsPage.vue  HomePage.vue  SettingsPage.vue  StatisticsPage.vue  UsersPage.vue
src/router/: index.js
src/store/: index.js
